[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/scripts/gameplay/player/player.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/gameplay/player/main_character.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/gameplay/player/jetpack_particles.png" type="Texture" id=3]
[ext_resource path="res://assets/scenes/ui/hud/player_hud.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/scenes/ui/hud/text_box.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sound/sfx/player/jump.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sound/sfx/player/water.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sound/sfx/player/jetpack_1.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sound/sfx/player/jetpack_2.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/textures/gameplay/player/particles/puff.png" type="Texture" id=10]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=4]
resource_name = "shoot"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 7, 8, 9, 6 ]
}

[sub_resource type="CanvasItemMaterial" id=5]
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.529032, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 0 ), 0.0, 3.49643, 0, 0, Vector2( 0.117978, 0.994318 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=6]
lifetime_randomness = 0.25
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 10.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 75.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 75.0
scale_curve = SubResource( 10 )
color_ramp = SubResource( 8 )
anim_speed = 1.0

[sub_resource type="CanvasItemMaterial" id=14]
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=15]
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 75.0
initial_velocity_random = 0.3
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 75.0
damping_random = 0.11
anim_speed = 1.0

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("..:anim_walk_frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("jetpack:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "walk"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("..:anim_walk_frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 2.5, 6 )

[node name="player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="player_sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 5
vframes = 10
frame = 10

[node name="jetpack" type="Sprite" parent="player_sprite"]
show_behind_parent = true
position = Vector2( 0, -1 )
texture = ExtResource( 2 )
hframes = 5
vframes = 10
frame = 6

[node name="anim" type="AnimationPlayer" parent="player_sprite/jetpack"]
autoplay = "idle"
playback_speed = 2.0
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/shoot = SubResource( 4 )

[node name="particles" type="Particles2D" parent="player_sprite/jetpack"]
material = SubResource( 5 )
position = Vector2( -4, 4 )
emitting = false
amount = 15
randomness = 0.25
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 3 )

[node name="puff" type="Particles2D" parent="player_sprite/jetpack"]
material = SubResource( 14 )
position = Vector2( -4, 4 )
emitting = false
amount = 6
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 15 )
texture = ExtResource( 10 )

[node name="animator" type="AnimationPlayer" parent="player_sprite"]
anims/RESET = SubResource( 12 )
anims/walk = SubResource( 11 )

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 0 )
shape = SubResource( 13 )

[node name="cam" type="Camera2D" parent="."]
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_speed = 12.0
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="shooting_points" type="Node2D" parent="."]
visible = false

[node name="pistol" type="Node2D" parent="shooting_points"]
visible = false

[node name="right" type="Position2D" parent="shooting_points/pistol"]
position = Vector2( 7, 0 )

[node name="right_up" type="Position2D" parent="shooting_points/pistol"]
position = Vector2( 2, -5 )

[node name="right_down" type="Position2D" parent="shooting_points/pistol"]
position = Vector2( 5, 6 )

[node name="left" type="Position2D" parent="shooting_points/pistol"]
position = Vector2( -8, 1 )

[node name="left_up" type="Position2D" parent="shooting_points/pistol"]
position = Vector2( -4, -5 )

[node name="left_down" type="Position2D" parent="shooting_points/pistol"]
position = Vector2( -5, 6 )

[node name="thunder" type="Node2D" parent="shooting_points"]
visible = false

[node name="right" type="Position2D" parent="shooting_points/thunder"]
position = Vector2( 7, 0 )

[node name="right_up" type="Position2D" parent="shooting_points/thunder"]
position = Vector2( 2, -5 )

[node name="right_down" type="Position2D" parent="shooting_points/thunder"]
position = Vector2( 5, 6 )

[node name="left" type="Position2D" parent="shooting_points/thunder"]
position = Vector2( -8, 1 )

[node name="left_up" type="Position2D" parent="shooting_points/thunder"]
position = Vector2( -4, -5 )

[node name="left_down" type="Position2D" parent="shooting_points/thunder"]
position = Vector2( -5, 6 )

[node name="repeater" type="Node2D" parent="shooting_points"]
visible = false

[node name="right" type="Position2D" parent="shooting_points/repeater"]
position = Vector2( 7, 1 )

[node name="right_up" type="Position2D" parent="shooting_points/repeater"]
position = Vector2( 0, -9 )

[node name="right_down" type="Position2D" parent="shooting_points/repeater"]
position = Vector2( 0, 10 )

[node name="left" type="Position2D" parent="shooting_points/repeater"]
position = Vector2( -8, 2 )

[node name="left_up" type="Position2D" parent="shooting_points/repeater"]
position = Vector2( -2, -9 )

[node name="left_down" type="Position2D" parent="shooting_points/repeater"]
position = Vector2( 0, 10 )

[node name="shotgun" type="Node2D" parent="shooting_points"]
visible = false

[node name="right" type="Position2D" parent="shooting_points/shotgun"]
position = Vector2( 7, 0 )

[node name="right_up" type="Position2D" parent="shooting_points/shotgun"]
position = Vector2( 0, -9 )

[node name="right_down" type="Position2D" parent="shooting_points/shotgun"]
position = Vector2( -1, 10 )

[node name="left" type="Position2D" parent="shooting_points/shotgun"]
position = Vector2( -8, 1 )

[node name="left_up" type="Position2D" parent="shooting_points/shotgun"]
position = Vector2( -2, -9 )

[node name="left_down" type="Position2D" parent="shooting_points/shotgun"]
position = Vector2( 0, 10 )

[node name="blade" type="Node2D" parent="shooting_points"]
visible = false

[node name="right" type="Position2D" parent="shooting_points/blade"]

[node name="right_up" type="Position2D" parent="shooting_points/blade"]

[node name="right_down" type="Position2D" parent="shooting_points/blade"]

[node name="left" type="Position2D" parent="shooting_points/blade"]

[node name="left_up" type="Position2D" parent="shooting_points/blade"]

[node name="left_down" type="Position2D" parent="shooting_points/blade"]

[node name="repeater_wait_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="coyote_time" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="hud" parent="." instance=ExtResource( 4 )]

[node name="floorcast_l" type="RayCast2D" parent="."]
position = Vector2( -3, 5 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="floorcast_r" type="RayCast2D" parent="."]
position = Vector2( 2, 5 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="CanvasLayer" parent="." instance=ExtResource( 5 )]
visible = false

[node name="other_collisions" type="Area2D" parent="."]

[node name="hitbox" type="CollisionShape2D" parent="other_collisions"]
position = Vector2( -0.5, 0 )
shape = SubResource( 13 )

[node name="sfx" type="Node2D" parent="."]
visible = false

[node name="jump" type="AudioStreamPlayer2D" parent="sfx"]
stream = ExtResource( 6 )
bus = "SFX"

[node name="water" type="AudioStreamPlayer2D" parent="sfx"]
stream = ExtResource( 7 )
bus = "SFX"

[node name="jetpack" type="AudioStreamPlayer2D" parent="sfx"]
stream = ExtResource( 8 )
volume_db = -1.0
bus = "SFX"

[node name="jetpack_final" type="AudioStreamPlayer2D" parent="sfx"]
stream = ExtResource( 9 )
volume_db = -15.0
bus = "SFX"

[connection signal="timeout" from="repeater_wait_timer" to="." method="_on_repeater_wait_timer_timeout"]
[connection signal="timeout" from="coyote_time" to="." method="_on_coyote_time_timeout"]
[connection signal="area_entered" from="other_collisions" to="." method="_on_other_collisions_area_entered"]
[connection signal="area_exited" from="other_collisions" to="." method="_on_other_collisions_area_exited"]
